--- a/apigateway/apigateway/pom.xml
+++ b/apigateway/apigateway/pom.xml
@@ -35,6 +35,10 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-gateway-server-webflux</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-config-client</artifactId>
+		</dependency>
 
 		<dependency>
         <groupId>org.springframework.cloud</groupId>
