--- a/order-service/order-service/pom.xml
+++ b/order-service/order-service/pom.xml
@@ -26,7 +26,7 @@
 
     <groupId>com.project.college.courses</groupId>
 
-    <artifactId>CourseService</artifactId>
+    <artifactId>OrderService</artifactId>
 
     <version>1.0-SNAPSHOT</version>
 
