--- a/servicediscovery/servicediscovery/src/main/resources/application.properties
+++ b/servicediscovery/servicediscovery/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 spring.application.name=servicediscovery
-server.port = 8761
+spring.config.import=configserver:http://localhost:8888
 
-#eureka server settings
-eureka.client.registerWithEureka = false
-eureka.client.fetchRegistry = false
-eureka.server.enableReplication = false
-eureka.instance.homePageUrl = http://localhost:8761/
+
+spring.cloud.config.username=admin
+spring.cloud.config.password=admin
