--- a/servicediscovery/servicediscovery/pom.xml
+++ b/servicediscovery/servicediscovery/pom.xml
@@ -39,12 +39,17 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-config-client</artifactId>
 		</dependency>
+		<dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		 
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
